Fonctionnalité #3430 Arranger code en fonction mvn site findBugs